- small changes, loader

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-amplify-react-native": "^3.2.2",
     "aws-sdk": "^2.644.0",
     "chance": "^1.1.4",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
