--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-shared-group-preferences": "^1.1.19",
     "react-native-webview": "^9.0.1",
     "twilio": "^3.41.1"
   },
