--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
+    "@yaradigitallabs/sh-universal-user-auth": "0.0.2",
     "amazon-cognito-identity-js": "^3.2.5",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react-native": "^3.2.2",
