--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "env-cmd react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -14,7 +14,7 @@
     "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
-    "@yaradigitallabs/sh-universal-user-auth": "0.0.2",
+    "@yaradigitallabs/sh-universal-user-auth": "0.0.4",
     "amazon-cognito-identity-js": "^3.2.5",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react-native": "^3.2.2",
@@ -35,6 +35,7 @@
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
