--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "@yaradigitallabs/sh-universal-user-auth": "0.0.4",
+    "@yaradigitallabs/sh-universal-user-auth-native": "0.0.5",
     "amazon-cognito-identity-js": "^3.2.5",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react-native": "^3.2.2",
